2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic:
	* Mono.TextEditor.mdp: Flush project format changes.

2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/Rule.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Reduced memory
	consumption of syntax highlighting parser.

2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/ClipboardActions.cs:
	* Mono.TextEditor.Highlighting/Chunk.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: Reduced memory
	footprint. Chunks are now represented as a primitve list instead of
	creating a collection object for each chunk request.

2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: set clip region.

2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSyntaxMode.xml:
	* SyntaxModes/XmlSyntaxMode.xml:
	* SyntaxModes/JavaSyntaxMode.xml:
	* SyntaxModes/ValaSyntaxMode.xml:
	* SyntaxModes/CSharpSyntaxMode.xml:
	* SyntaxModes/JavascriptSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Match.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Hard coded the number
	regular expression for speed up.

2009-01-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/LineSegment.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/Rule.cs:
	* Mono.TextEditor.Highlighting/Keywords.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Optimized text editor
	speed & reduced memory footprint.

2009-01-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Optimized text editor
	drawing for very large chunks.

2009-01-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/ClipboardActions.cs: fixed 'Bug 468808 - Cannot
	copy/paste in files'.
