@@ -1,3 +1,7 @@
+2009-01-27  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.TextEditor/TextViewMargin.cs: Remove debug code.
+
 2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* gtk-gui/gui.stetic:
